Fix a bunch of design issues on mobile

--- a/public/elements/layout.css
+++ b/public/elements/layout.css
@@ -66,18 +66,3 @@ nav h1 {
   padding: 0;
   font-size: 24px;
 }
-
-#sub-curtain {
-  position: absolute;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  top: 0px;
-  bottom: 55px;
-  left: 0;
-  right: 0;
-  background-color: rgba(0, 0, 0, 0.15);
-  z-index: 1;
-  overflow: hidden;
-}
-
